# agent-terminal

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  biome.json  index.html  latest.json  package.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  tap-dispatch.yml
companion/: .fallowrc.jsonc  .gitignore  App.tsx  app.json  babel.config.js  biome.json  global.css  index.js  package.json  tsconfig.json
companion/src/app/: _layout.tsx  connect.tsx  index.tsx  projects.tsx
companion/src/app/tab/: [tabid].tsx
companion/src/modules/env/: dev-config.ts
companion/src/modules/stores/: $session.ts
companion/src/modules/wss/: client.helpers.test.ts  client.helpers.ts  client.test.ts  client.ts  protocol.gen.ts
companion/src/screens/connect/: ConnectScreen.tsx  connect.data.ts  connect.helpers.test.ts  connect.helpers.ts  connect.schemas.ts
companion/src/screens/home/: HomeScreen.tsx  home.data.ts
companion/src/screens/projects/: NewProjectSheet.tsx  NewTabSheet.tsx  ProjectsScreen.tsx  RenameSheet.tsx  SheetLayout.tsx  projects.data.ts
companion/src/screens/tab/: ExtraKeysBar.tsx  TabScreen.tsx  TerminalDom.android.tsx  TerminalDom.tsx  extra-keys.helpers.test.ts  extra-keys.helpers.ts  tab.data.ts  terminal-html.helpers.test.ts  terminal-html.helpers.ts
docs/: RELEASING.md
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/icons/: icon.icns
src-tauri/macos/: entitlements.plist
src-tauri/sidecar/: index.js  package.json
src-tauri/sidecar/test/: dispatch.test.ts
src-tauri/src/: auth_stub.rs  commands.rs  hook_config.rs  hook_server.rs  identity.rs  lib.rs  notifications.rs  project_registry.rs  projects_cache.rs  protocol.rs  pty_manager.rs  shell_integration.rs  sidecar_client.rs  stream_hub.rs  wss_server.rs
src-tauri/src/mod_engine/: context.rs  engine.rs  mod.rs
src-tauri/src/mod_engine/mods/: agent_turn.rs  claude_code.rs  codex.rs  git_monitor.rs  mod.rs  shell_process.rs
src-tauri/tests/: hook_integration.rs  wss_integration.rs
src/components/: TabStatusIcon.tsx  agent.helpers.ts
src/components/SettingsDialog/: FontSettingsTab.tsx  SettingsDialog.tsx  ThemeSettingsTab.tsx
src/components/Sidebar/: Sidebar.tsx  SidebarProjectRow.tsx  SidebarTabItem.tsx
src/components/StatusBar/: PrItem.test.ts  PrItem.tsx  StatusBarLeft.tsx  StatusBarRight.tsx
src/components/TabBar/: TabBar.tsx
src/components/TabSwitcher/: TabSwitcher.tsx  tab-switcher.filter.test.ts  tab-switcher.helpers.ts  tab-switcher.test.ts
src/components/TerminalPane/: TerminalPane.tsx
src/components/TerminalSearchBar/: TerminalSearchBar.tsx
src/components/ThemeToggle/: ThemeToggle.tsx
src/components/UpdateBanner/: UpdateBanner.tsx
src/components/XTermTerminal/: XTermTerminal.tsx  xterm-terminal.hooks.ts  xterm-terminal.keys.ts  xterm-terminal.themes.ts  xterm-terminal.webgl.test.ts  xterm-terminal.webgl.ts
src/components/ui/: command.tsx  dropdown-menu.tsx  input-group.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
src/modules/dragDrop/: dropPayload.ts
src/modules/ipc/: commands.ts  events.ts
src/modules/keymap/: keys.ts
src/modules/mods/: mod-listener.ts
src/modules/notifications/: agentStateNotifier.test.ts  agentStateNotifier.ts  architecture.test.ts  notificationsBridge.ts  preferences.ts
src/modules/settings/: useSettingsWiring.ts
src/modules/stores/: $activeSearch.ts  $activeTerminal.test.ts  $activeTerminal.ts  $closedTabs.ts  $colorTheme.test.ts  $colorTheme.ts  $fontFamily.test.ts  $fontFamily.ts  $fontSize.ts  $keyboard.ts  $navigation.openNewTab.test.ts  $navigation.test.ts  $navigation.ts  $projects.ts  $settingsOpen.ts  $tabMeta.ts  $tabRecency.init.ts  $tabRecency.test.ts  $tabRecency.ts  $theme.test.ts  $theme.ts  useMetaHeldTracker.ts
src/modules/theme/: ansiPalettes.ts  colorThemes.ts  themeVars.ts
src/modules/updater/: $updater.test.ts  $updater.ts  checkForUpdate.ts  installUpdate.ts  useUpdaterWiring.ts
src/modules/wss-bridge/: mobile-ops.ts
src/screens/workspace/: WorkspaceLayout.tsx  WorkspaceView.tsx  workspace.helpers.test.ts  workspace.helpers.ts
xtask/: Cargo.toml
xtask/src/: main.rs
