[package]
name = "agent-terminal"
version = "0.1.5"
description = "Agent Terminal — a mouse-first project-scoped terminal workspace"
authors = ["DaniAkash"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "agent_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# Switches the running instance to a separate "dev" namespace so a dev build
# can coexist with a production install on the same machine. See src/identity.rs.
dev-instance = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
# Ensures only one Agent Terminal instance runs at a time. Critical on macOS
# for notification click routing: without it, clicking a notification can
# launch a fresh .app process while the original one keeps running. With it,
# Launch Services forwards the duplicate-launch attempt to the existing
# process instead.
tauri-plugin-single-instance = "2"
# Dev-mode banner display only (debug_assertions = true). On macOS in dev this
# attributes notifications to com.apple.Terminal, which is fine for visibility
# but means clicks don't route back to us — see the focus-event heuristic.
tauri-plugin-notification = "2"
# Self-update via signed Tauri update bundles. Disabled at build time in
# the `dev-instance` feature (dev builds share the prod manifest endpoint
# only by accident; letting them auto-update would overlay the prod .app
# onto the dev bundle id).
tauri-plugin-updater = "2"
# Exposes process::relaunch() to the renderer so the update flow can
# boot the new binary after the updater swaps it in.
tauri-plugin-process = "2"
# Release-mode notifications (debug_assertions = false). Wraps the native
# UNUserNotificationCenter on macOS so we get real per-notification click
# callbacks via UNUserNotificationCenterDelegate. Mock mode falls back to
# console logs (used in tests, never in shipped builds).
user-notify = "0.4"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# `ws` feature is needed for the WSS server's `/stream` endpoint. axum-ws
# is a thin wrapper over tokio-tungstenite (which axum-ws pulls in for us)
# — same underlying implementation the master plan sketched, with axum's
# routing / middleware / graceful-shutdown machinery bolted on top.
axum = { version = "0.8", features = ["ws"] }
dirs = "5"
encoding_rs = "0.8"
sysinfo = "0.33"
# Base64 of raw PTY bytes for the sidecar's JSON-RPC channel. JSON can't carry
# arbitrary binary cleanly, so every `write` op encodes the chunk and the
# sidecar decodes on receipt.
base64 = "0.22"
# Structured errors for the sidecar client. Keeps the call sites (`?`-able)
# tight without hand-rolling Display/source plumbing.
thiserror = "2"
# PATH walk for the bundled-Node fallback at runtime. Production builds will
# eventually carry a Node binary inside the .app bundle; until then, dev
# launches look the runtime up from the system.
which = "8"
# Sharded concurrent map for the StreamHub's per-tab state. Many reader
# threads broadcast concurrently across different tabs; a single Mutex
# would serialise unrelated tabs through the lock.
dashmap = "6"
# Attribute macros for the wire-protocol types. `cargo xtask regen-protocol`
# picks up every `#[typeshare]`-annotated type and emits the matching TS
# discriminated-union file under `companion/src/modules/wss/protocol.gen.ts`.
typeshare = "1"
# Constant-time token comparison for the WSS auth stub. Prevents timing
# attacks even in dev mode — cheap defence-in-depth over `==` on bytes.
constant_time_eq = "0.3"
# Random token generation for the initial dev config file. v4 UUIDs give
# ~122 bits of entropy which is plenty for a Phase-1 bearer token.
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
# Isolated temp directories for auth_stub round-trip tests.
tempfile = "3"

